<resources>
    <string name="app_name">PracaInz2</string>
    <string name="jaslospis">Jadłospis</string>
    <string name="lodowka">Lodówka</string>
    <string name="przepisy">Przepisy</string>
    <string name="trening">Trening</string>
    <string name="menu">Menu</string>
    <string name="sniadanie">Śniadanie</string>
    <string name="IIsniadanie">II Śniadanie</string>
    <string name="obiad">Obiad</string>
    <string name="przekaska">Przekąska</string>
    <string name="woda">Woda</string>
    <string name="kolacja">Kolacja</string>
    <string name="twojalodowka">Twoja Lodówka</string>
    <string name="proponowane">Proponowane</string>
    <string name="ulubione">Ulubione</string>
    <string name="dodajnowe">Dodaj Nowe</string>
    <string name="poczatkujacy">Początkujący</string>
    <string name="sredniozaaw">Średnio zaaw</string>
    <string name="zaawansowany">Zaawansowany</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>