<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".traning">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="460dp"
        android:layout_height="120dp"
        android:background="@drawable/bluebox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="465dp"
        android:layout_height="100dp"
        android:background="@drawable/blackboc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/blackboc"
        android:drawableTop="@drawable/eat"
        android:text="@string/jaslospis"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/textView12" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/blackboc"
        android:drawableTop="@drawable/fridge"
        android:text="@string/lodowka"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/blackboc"
        android:drawableTop="@drawable/recipe"
        android:text="@string/przepisy"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:background="@drawable/blackboc"
        android:drawableTop="@drawable/traning"
        android:text="@string/trening"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="63dp"
        android:layout_height="51dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/blackboc"
        android:drawableTop="@drawable/menu"
        android:text="@string/menu"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trening"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/poczatkujacy"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="8dp"
        android:text="@string/sredniozaaw"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="-200dp"
        android:text="@string/zaawansowany"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/klatka" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/brzuch" />

</androidx.constraintlayout.widget.ConstraintLayout>